test/sema/negative/cps_call.out
cps_call.impala:3 col 9 - 15: error: missing last argument to call continuation
